--- a/src/app/tile/tile.component.css
+++ b/src/app/tile/tile.component.css
@@ -1,7 +1,7 @@
 .tile {
-    width: calc((min(100dvh, 100dvw) - 3em) / 4);
-    height: calc((min(100dvh, 100dvw) - 3em) / 4);
-    border: calc((min(100dvh, 100dvw) - 3em) / 300) solid black;
+    width: calc(var(--scale) / 4);
+    height: calc(var(--scale) / 4);
+    border: calc((var(--scale) / 300)) solid black;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -9,5 +9,5 @@
 
 .tile.dragSource,
 .tile.dragTarget {
-    border: calc((min(100dvh, 100dvw) - 3em) / 100) outset black;
+    border: calc(var(--scale) / 100) outset black;
 }
