--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -35,6 +35,6 @@ main {
 
 @media (orientation: portrait) {
     main {
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
 }
